tyring to get site

--- a/final.html
+++ b/final.html
@@ -60,17 +60,8 @@
 
 <br>
 
-<p class="itemdesc">
-    Forged by 
-    <span id ="forgername"></span>
-    , the 
-    <span id="forgeradj"></span>
-    <span id="forgerrace"></span>
-    , this 
-    <span id="weaponcolor"></span>
-    weapon has
-    <span id="feature"></span>
-</p>
+<span class="itemtext" id="itemdesc">
+</span>
 
 
 <br>
