--- a/final.html
+++ b/final.html
@@ -15,7 +15,6 @@
 <div>
     <h1 class="special">    Dungeon Forge</h1>
 </div>
-<p>test </p>
 
 <body>
 <h4 class="special2">Welcome to Dungeon Forge, a resource for Dungeons & Dragons players looking to create new and innovative items with unique enchantments!</h4>
@@ -61,26 +60,23 @@
 
 <br>
 
-<p class="itemdesc">
-    Forged by 
-    <span id ="forgername"></span>
-    , the 
-    <span id="forgeradj"></span>
-    <span id="forgerrace"></span>
-    , this 
-    <span id="weaponcolor"></span>
-    weapon has
-    <span id="feature"></span>
-</p>
+<span class="itemtext" id="itemdesc">
+</span>
 
 
 <br>
-<br>
+<p class="itemtext" id="statblock1"></p>
+<p class="itemtext" id="statblock2"></p>
+<p class="itemtext" id="statblock3"></p>
+<p class="itemtext" id="statblock4"></p>
+<p class="itemtext" id="statblock5"></p>
+<p class="itemtext" id="statblock6"></p>
+<p class="itemtext" id="statblock7"></p>
 <br>
 <br>
 
 
-<select name="armor" id="">
+<!-- <select name="armor" id="">
 <option value="randarm">Armor</option>
 <option value="helm">Helm</option>
 <option value="cloak">Cloak</option>
@@ -107,7 +103,7 @@
 <option value="mythical">Mythical</option>
 </select>
 
-<button>Forge!</button>
+<button>Forge!</button> -->
 
 <script src="final.js"></script>
 </body>
